--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -1,4 +1,44 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+    <link rel="stylesheet" href="http://d2fq26gzgmfal8.cloudfront.net/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/bs/dt-1.10.9/datatables.min.css" />
+</head>
+
 <body>
-
-
+    <div class="container">
+        <div class="row">
+            <h1>Trains</h1>
+        </div>
+        <div class="row">
+            <table class="table table-bordered" id="stations">
+                <thead>
+                    <tr>
+                        <th>Abbr</th>
+                        <th>Name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{ range .Stations }}
+                    <tr>
+                        <td>{{ .Abbr }}</td>
+                        <td>{{ .Name }}</td>
+                    </tr>
+                    {{ end }}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <script src="http://d2fq26gzgmfal8.cloudfront.net/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/r/bs/dt-1.10.9/datatables.min.js"></script>
+    <script src="http://d2fq26gzgmfal8.cloudfront.net/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function()
+        {
+            $('#stations').DataTable();
+        });
+    </script>
+</body>
+</html>
