--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -37,7 +37,7 @@
     <script>
         $(document).ready(function()
         {
-            $('#stations').DataTable();
+            $('#stations').DataTable()
         });
     </script>
 </body>
