--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -33,6 +33,7 @@
                         <th>Dest</th>
                         <th>Minutes</th>
                         <th>Line</th>
+                        <th>Points</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -41,6 +42,7 @@
                         <td>{{ .Dest }}</td>
                         <td>{{ .Minutes }}</td>
                         <td>{{ .Line }}</td>
+                        <td>{{ .Points }}</td>
                     </tr>
                     {{ end }}
                 </tbody>
