--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -41,7 +41,7 @@
                         <th>Destination</th>
                         <th>Minutes</th>
                         <th>Line</th>
-                        <th>Points</th>
+                        <th>Score</th>
                     </tr>
                 </thead>
                 <tbody>
