--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title></title>
     <link rel="stylesheet" href="http://d2fq26gzgmfal8.cloudfront.net/bootstrap.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/bs/dt-1.10.9/datatables.min.css" />
@@ -12,28 +13,31 @@
         <div class="row">
             <h1>Trains</h1>
         </div>
-            <div class="row">
-            <form action="/" method="get">
-             <div class="form-group">
-                <label for="exampleFormControlSelect1">Station select</label>
+        <div class="row">
+            <form class="form-inline" action="/" method="get">
+            <div class="form-group">
+                <label for="abbr">Station select</label>
                 <select class="form-control" id="abbr" name="abbr" >
                     <option value="" selected disabled>Select Station</option>
                     {{ range .AllStations }} 
-                  <option>{{ .Abbr }}</option>
+                    <option>{{ .Abbr }}</option>
                     {{ end }} 
                 </select>
                 </div>
-                <div>
+                <div class="checkbox">
                     {{ range .AllLines }} 
-                <input type="checkbox" name="line" value="{{ .Color }}">
-                <label for="line">{{ .Color }}</label>
+                    <label>
+                        <input type="checkbox" name="line" value="{{ .Color }}">
+                        {{ .Color }}
+                    </label>
                     {{ end }} 
-              </div>
-              <div>
-              <input type="submit">
-              </div>
-            </form>
+                </div>
+                <div>
+                <button type="submit" class="btn btn-default">Submit</button>
             </div>
+            <hr class="mb-4">
+            </form>
+        </div>
         <div class="row">
             <table class="table table-bordered" id="stations">
                 <thead>
